1999-01-12  Jim Kingdon  <http://www.cyclic.com>

	* memmove.c: Remove paragraph which contained the FSF's old
	snail mail address; it has changed.

1999-01-05  Jim Kingdon  <http://www.cyclic.com>

	* md5.c, md5.h: Rename all the external interfaces to start with
	cvs_* to avoid namespace pollution problems.  Include string.h
	unconditionally, to avoid gcc -Wall warnings on memset.

1998-12-29  Jim Kingdon  <http://www.cyclic.com>

	* getdate.y (RelativeMonth): Add 1900 to tm_year, so that in 2000,
	we pass 2000, not 100, to Convert.
	(Convert): Add comment about Year argument.
	* getdate.c: Regenerated using byacc.

Tue Mar 24 16:08:00 1998  Ian Lance Taylor  <ian@cygnus.com>

	* Makefile.in (CFLAGS): Set to @CFLAGS@, not -g.

1998-02-20  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* regex.c: Partial merge with version from emacs 20.2.  Brings
	over some trivial changes (whitespace and so on) (most such
	changes I didn't bother with, for this time).  Don't cast to int
	before comparing old_regend[r] to regstart[r] (this is the point
	of bothering; the old code was broken for 64 bit machines.
	Reported by Paul Vixie).

Tue Feb 17 18:33:26 1998  Ian Lance Taylor  <ian@cygnus.com>

	* memmove.c: New file, resurrecting the old one.
	* Makefile.in (SOURCES): Add memmove.c.

1998-02-03  Tim Pierce  <twp@skepsis.com>

	* system.h (CVS_LSTAT): New macro.

Sat Feb  7 17:33:39 1998  Ian Lance Taylor  <ian@cygnus.com>

	* getline.h (getstr): Declare.

13 Jan 1998  Jim Kingdon

	* fncase.c: Include config.h before system.h.

	* system.h: Just include string.h unconditionally.  We already
	include it unconditionally elsewhere.

Tue Jan 13 16:51:59 1998  Ian Lance Taylor  <ian@cygnus.com>

	* fncase.c: New file, taken from windows-NT/filesubr.c.
	* system.h: If __CYGWIN32__ or WIN32 are defined, define
	FOLD_FN_CHAR, FILENAMES_CASE_INSENSITIVE, and ISDIRSEP, and
	declare fncmp and fnfold.  Taken from windows-NT/config.h.
	* Makefile.in (SOURCES): Add fncase.c.
